# NeuralPFRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  execute.bat  imgui.ini
include/: application.hpp  atmosphere_lut.h  cuda_buffer.h  cuda_texture.h  launch_params.h  mie_tables_txt_loader.h  model.h  nsf_hyper_checkpoint.hpp  nsf_hyper_coopvec_pack.hpp  optix8.hpp  ptx_data_reader.hpp  renderer.hpp  safetensors_loader.hpp  sceneDescIO.hpp  texture.hpp  vdb_loader.hpp
kernels/: copy_buffer_to_surface.cu  toneMap.cu
mieSimData/: Mie_PhaseFunctionData_050.txt  Mie_PhaseFunctionData_055.txt  Mie_PhaseFunctionData_060.txt  Mie_PhaseFunctionData_065.txt  Mie_PhaseFunctionData_070.txt  Mie_PhaseFunctionData_075.txt  Mie_PhaseFunctionData_080.txt  Mie_PhaseFunctionData_085.txt  Mie_PhaseFunctionData_090.txt  Mie_PhaseFunctionData_095.txt  Mie_PhaseFunctionData_100.txt  Mie_PhaseFunctionData_105.txt  Mie_PhaseFunctionData_110.txt  Mie_PhaseFunctionData_115.txt  Mie_PhaseFunctionData_120.txt  Mie_PhaseFunctionData_125.txt  Mie_PhaseFunctionData_130.txt  Mie_PhaseFunctionData_135.txt  Mie_PhaseFunctionData_140.txt  Mie_PhaseFunctionData_145.txt  Mie_PhaseFunctionData_150.txt  Mie_PhaseFunctionData_155.txt  Mie_PhaseFunctionData_160.txt  Mie_PhaseFunctionData_165.txt  Mie_PhaseFunctionData_170.txt  Mie_PhaseFunctionData_175.txt  Mie_PhaseFunctionData_180.txt  Mie_PhaseFunctionData_185.txt  Mie_PhaseFunctionData_190.txt  Mie_PhaseFunctionData_195.txt  Mie_PhaseFunctionData_200.txt  Mie_ScatteringParameters_050.txt  Mie_ScatteringParameters_055.txt  Mie_ScatteringParameters_060.txt  Mie_ScatteringParameters_065.txt  Mie_ScatteringParameters_070.txt  Mie_ScatteringParameters_075.txt  Mie_ScatteringParameters_080.txt  Mie_ScatteringParameters_085.txt  Mie_ScatteringParameters_090.txt  (+22 more)
model/tokyo/: unitSphere.fbx
scene/: bistroExterior.json  newSponza.json  sampleScene.json  sampleScene2.json
shaders/: config.cuh  diffuse_brdf.cu  disney_principled_brdf.cu  glass_bsdf.cu  hit.cu  lens.cu  light_sample.cu  per_ray_data.cuh  shader_common.cuh
shaders/callable/: diffuse_brdf.cu  disney_principled_brdf.cu  glass_bsdf.cu  lens.cu  light_sample.cu
shaders/device/: atmosphere_sampling_device.cuh  neural_phase_function.cuh  nsf_simd_constant_backend.cuh  nsf_simd_constant_flow_flexible_data.cuh  nsf_simd_hardcoded_flow_flexible_generated.cuh  phase_function.cuh  random_number_generator.cuh  shader_common.cuh  trace_surface.cuh  trace_volume.cuh
shaders/entry/: ah_radiance.cu  ah_shadow.cu  ch_radiance.cu  ch_radiance_vdb.cu  ch_shadow.cu  intersection_vdb.cu  miss_radiance.cu  miss_shadow.cu  raygen.cu  sphere_intersection.cu
shaders/params/: per_ray_data.cuh
spectrum/: CIE_lms_cf_2deg.csv  PVL_Spectrum.csv  basis_rgb.csv  cie2006-basis-bt709-390+1+780.csv  compute_basis.py  illumination.csv  xyzbar.csv  xyzbar_from_lms.csv
src/: application.cpp  atmosphere_lut.cpp  main.cpp  model.cpp  renderer.cpp  texture.cpp  vdb_loader.cpp
utils/: CMakeLists.txt  box.hpp  helper_math.h  my_debug_tool.hpp  my_math.hpp
utils/cmake/: BuildSettings.cmake  BuildVDB.cmake  FindOptiX8.cmake  FindOptiX9.cmake  nvcuda_compile_module.cmake
viewer/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp
weights/: flow.safetensors  flow_flexible.safetensors  flow_light.safetensors
